# blurt

./: .dockerignore  .env.backend.example  .env.bot.example  .env.example  .gitignore  AGENTS.md  IMPLEMENTATION_PLAN.md  LICENSE  README.md  docker-compose.ollama.yml  docker-compose.override.yml  docker-compose.override.yml.disabled  docker-compose.yml  pyproject.toml  quickstart.sh  requirements.txt
.github/workflows/: publish.yml  test.yml
backend/: Dockerfile  __init__.py  github_client.py  llm.py  main.py  processing.py  requirements.txt  settings.py  tagging.py
backend/llm/: __init__.py  _logging.py  base.py  factory.py
backend/llm/providers/: anthropic.py  gemini.py  ollama.py  openai.py
bot/: Dockerfile  config.py  idea_handler.py  idea_service.py  main.py  requirements.txt  settings.py
bot/connector/: bot_connector.py  discord_connector.py  telegram_connector.py
bot/connectors/: discord_connector.py  telegram_connector.py
bot/discord/: main.py
bot/shared/: backend_client.py  bot_connector.py  idea_handler.py  idea_service.py
bot/telegram/: main.py
docs/: flow.md
idea_inbox/: settings.py
scripts/: deploy_gcp.sh  setup.sh
src/blurt/: __init__.py
src/blurt/backend/: Dockerfile  github_client.py  main.py  settings.py
src/blurt/backend/llm/: __init__.py  _logging.py  base.py  factory.py
src/blurt/backend/llm/providers/: anthropic.py  gemini.py  ollama.py  openai.py
src/blurt/bot/: Dockerfile  backend_client.py  idea_handler.py  idea_service.py  main.py  settings.py
src/blurt/bot/connector/: discord_connector.py  telegram_connector.py
tests/: conftest.py  test_anthropic_provider.py  test_backend_api.py  test_backend_client.py  test_backend_settings.py  test_cleaned_idea.py  test_discord_bot_smoke.py  test_gemini_provider.py  test_github_client_labels.py  test_idea_service.py  test_ollama_provider.py  test_openai_provider.py  test_tagging.py  test_telegram_bot_smoke.py
