[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blurt"
version = "0.1.0"
description = "Discord/Telegram bot that captures ideas, processes them with LLMs, and creates GitHub issues"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "uvicorn[standard]>=0.46.0",
    "httpx>=0.28.1",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "python-dotenv>=1.2.2",
    "google-genai>=1.74.0",
    "openai>=2.33.0",
    "anthropic>=0.97.0",
    "ollama>=0.6.2",
    "discord.py>=2.7.1",
    "python-telegram-bot>=22.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
